--- a/src/app/core/components/content-wrapper/content-wrapper.component.html
+++ b/src/app/core/components/content-wrapper/content-wrapper.component.html
@@ -1,1 +1,4 @@
-<p>content-wrapper works!</p>
+<div class="body-content">
+    <ganapati-navbar></ganapati-navbar>
+    <ng-content></ng-content>
+</div>
