--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
@@ -31,5 +30,24 @@ $ganapatiAngular-theme: mat-light-theme($ganapatiAngular-primary, $ganapatiAngul
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  padding:0;
+  font-size: 14px;
+
+}
+
+// test style
+.body-content {
+  position: relative;
+  background: #f0f0fa;
+  -webkit-transition: padding 0.3s;
+  transition: padding 0.3s;
+  min-height: 100vh;
+}
