--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,23 @@ $ganapatiAngular-theme: mat-light-theme($ganapatiAngular-primary, $ganapatiAngul
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+// keyframes
+@-webkit-keyframes notesMembers {
+  0%{
+    transform: scale(0.5);
+  }
+  100%{
+  transform: scale(1);
+  }
+}
+@keyframes notesMembers {
+  0%{
+    transform: scale(0.5);
+  }
+  100%{
+  transform: scale(1);
+  }
+}
 
 html,
 body {
@@ -39,7 +56,7 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   padding:0;
-  font-size: 14px;
+  font-size: 1rem;
 
 }
 
@@ -51,3 +68,64 @@ body {
   transition: padding 0.3s;
   min-height: 100vh;
 }
+.horizontal-layout .body-content{
+  padding-left: 0;
+}
+
+.content-wrapper{
+  // padding: 2rem;
+  margin: 2rem;
+}
+
+.example-full-width{
+  width: 100%;
+}
+
+// side-nav
+mat-sidenav {
+  width: 250px;
+  background: inherit;
+}
+
+.logout-btn {
+
+  color: red;
+  position: relative;
+
+
+}
+
+.nav-bar-container {
+  background-color: whitesmoke;
+}
+
+.nav-bar {
+  position: relative;
+  margin-left: 12%;
+  height: 5rem;
+
+
+  mat-icon {
+    size: 150px;
+    // padding-right: 12px;
+  }
+}
+
+.mat-nav-list,
+.mat-icon {
+  margin-right: 16px;
+  color:coral;
+
+
+}
+
+#sidenav{
+border-bottom: 1px red;
+}
+
+.logout:hover{
+border-bottom:red;
+color:red;
+}
+
+
