UI for add customer page enhanced with form validation, funtion for nested modal test added

--- a/src/app/features/customer/pages/editcustomer/editcustomer.component.html
+++ b/src/app/features/customer/pages/editcustomer/editcustomer.component.html
@@ -1,60 +1,67 @@
-<section fxLayout="row wrap" fxLayoutAlign="center center">
-  <mat-card fxFlex="500px" fxFlex.xs="100%" class="mt-4 mb-4">
-    <mat-card-title>Create new Customer</mat-card-title>
-    <mat-divider></mat-divider>
-    <form [formGroup]="editCustomerForm" autocomplete="off" novalidate fxLayout="column wrap"
-      fxLayoutAlign="center center" fxLayoutGap="10px">
-      <mat-card-content class="mt-4">
-        <mat-form-field>
-          <input matInput type="text" placeholder="First Name" formControlName="fname" id="fname" />
+<!-- customer edit modal -->
+<h2 mat-dialog-title>Edit Customer</h2>
+<mat-divider class="mb-3"></mat-divider>
+<mat-dialog-content class="mat-typography">
+  <form [formGroup]="editCustomerForm" autocomplete="off" novalidate fxLayout="column wrap"
+    fxLayoutAlign="center center" fxLayoutGap="10px">
+    <!-- first name -->
+    <div class="row">
+      <div class="col-md-12 col-sm-6 mx-auto">
+        <mat-form-field class="example-full-width">
+          <input matInput type="text" placeholder="First name" formControlName="fname" id="fname" />
           <mat-hint align="end">Enter customer's first name</mat-hint>
-          <!-- <mat-error *ngIf="hasError('name', 'required')">Name is required</mat-error>
-          <mat-error *ngIf="hasError('name', 'maxlength')">You have more than 60 characters</mat-error>-->
+          <mat-error *ngIf="editCustomerForm.controls['fname'].invalid">{{ getFirstNameErrorMessage() }}
+          </mat-error>
         </mat-form-field>
+      </div>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="text" placeholder="Last Name" formControlName="lname" id="lname"
+    <!-- last name -->
+    <div class="row">
+      <div class=" col-md-12 col-sm-6 mx-auto">
+        <mat-form-field class="example-full-width">
+          <input matInput type="text" placeholder="Last name" formControlName="lname" id="lname"
             fxlayoutalign="column" />
           <mat-hint align="end">Enter customer's last name</mat-hint>
-          <mat-error *ngIf="hasError('name', 'required')">Last Name is required</mat-error>
-          <mat-error *ngIf="hasError('name', 'maxlength')">Enter last name</mat-error>
+          <mat-error *ngIf="editCustomerForm.controls['lname'].invalid">{{ getLastNameErrorMessage() }}
+          </mat-error>
         </mat-form-field>
+      </div>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="text" placeholder="address" formControlName="address" />
+    <!-- address -->
+    <div class="row">
+      <div class="col-md-12 col-sm-6 mx-auto">
+        <mat-form-field class="example-full-width">
+          <input matInput type="text" placeholder="Address" formControlName="address" />
           <mat-hint align="end">Enter customer's address</mat-hint>
-          <!--<mat-error *ngIf="hasError('address', 'required')">Address is required</mat-error>
-          <mat-error *ngIf="hasError('address', 'maxlength')">You have more than 100 characters</mat-error>-->
+          <mat-error *ngIf="editCustomerForm.controls['address'].invalid">{{ getAddressErrorMessage() }}
+          </mat-error>
         </mat-form-field>
+      </div>
+    </div>
 
-        <mat-form-field>
-          <input matInput type="number" placeholder="mobile number" formControlName="mobile" />
+    <!-- mobile -->
+    <div class="row">
+      <div class="col-md-12 col-sm-6 mx-auto">
+        <mat-form-field class="example-full-width" align="center">
+          <input matInput type="number" placeholder="Mobile number" formControlName="mobile" />
           <mat-hint align="end">Enter customer's mobile number</mat-hint>
-          <!--<mat-error *ngIf="hasError('mobile', 'required')">Address is required</mat-error>
-          <mat-error *ngIf="hasError('mobile', 'maxlength')">You have more than 100 characters</mat-error>-->
+          <mat-error *ngIf="editCustomerForm.controls['mobile'].invalid">{{ getMobileErrorMessage() }}</mat-error>
         </mat-form-field>
+      </div>
+    </div>
 
-        <!-- <mat-form-field>
-          <input matInput [matDatepicker]="picker" placeholder="Choose a registered date" formControlName="registerDate"
-                 id="registerDate"
-                 readonly (click)="picker.open()">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>-->
+    <mat-divider class=" mt-5"></mat-divider>
+    <!-- save/cancel buttons -->
+    <mat-card-actions>
 
-        <!--<mat-form-field>
-          <input matInput [matDatepicker]="picker" placeholder="Choose a updated date" formControlName="updateAt"
-                 id="updateAt"
-                 readonly (click)="picker.open()">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>-->
-      </mat-card-content>
-      <mat-card-actions align="center">
-        <ganapati-save-cancel-buttons (save)="onSave()" (cancel)="onCancel()">
+      <ganapati-save-cancel-buttons (save)="onSave()" (cancel)="onCancel()">
 
-        </ganapati-save-cancel-buttons>
-      </mat-card-actions>
-    </form>
-  </mat-card>
-</section>
+      </ganapati-save-cancel-buttons>
+
+       <!-- <button mat-raised-button color="primary" [mat-dialog-close]='1' (click)="onSave()">Save</button>
+      <button mat-raised-button color="secondary" [mat-dialog-close]='0' class="m-3" (click)="onCancel()">Cancel</button> -->
+    </mat-card-actions>
+  </form>
+</mat-dialog-content>
