--- a/src/app/features/customer/pages/customer/customer.component.html
+++ b/src/app/features/customer/pages/customer/customer.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <div fxLayout fxLayout.lt-md="column wrap" fxLayoutAlign="center center" fxLayoutGap.gt-sm="250px"
-    fxLayoutGap.lt.md="20px">
+       fxLayoutGap.lt.md="20px">
     <!-- search  -->
 
     <div>
@@ -8,7 +8,7 @@
       class="mt-3 mb-3">Add Customer <mat-icon align="center">person_add</mat-icon></a> -->
       <mat-form-field class="w-25" floatLabel="never" align="end">
         <input matInput [(ngModel)]="searchKey" placeholder="Search here..." autocomplete="off"
-          (keyup)="applyFilter()" />
+               (keyup)="applyFilter()"/>
         <button mat-button mat-icon-button matSuffix aria-label="Clear" *ngIf="searchKey" (click)="clearField()">
           <mat-icon>close</mat-icon>
         </button>
@@ -23,31 +23,36 @@
     <table mat-table [dataSource]="customerListTableDataSource" matSort class="example-full-width mb-3" hover="true">
       <ng-container matColumnDef="sn">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Sn</th>
-        <td mat-cell *matCellDef="let element ;index as i" matTooltip="View detials">
-          {{ i+1 }}
+        <td mat-cell *matCellDef="let element ;index as i" matTooltip="View detials"
+            onmouseover="this.style.color='red'" onmouseout="this.style.color='black'">
+          {{ i + 1 }}.
 
           <!-- <button mat-stroked-button routerLink="/customer-detail/id">
           {{ element.fname }}
         </button>-->
         </td>
       </ng-container>
+      <!-- customer name -->
       <ng-container matColumnDef="fname">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
-        <td mat-cell *matCellDef="let element" matTooltip="View detials">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Full Name</th>
+        <td mat-cell *matCellDef="let element" onmouseover="this.style.color='red'"
+            onmouseout="this.style.color='black'" style="cursor: pointer" matTooltip="View Mortgage detials."
+            (click)="showCustomerDetails(element.customerid)">
           {{ element.fname | titlecase}}
+          {{ element.lname | titlecase}}
 
-          <!-- <button mat-stroked-button routerLink="/customer-detail/id">
+          <!-- <button mat-stroked-button   matTooltip="Info about the action" routerLink="/customer-detail/id">
           {{ element.fname }}
-        </button>-->
+        </button> -->
         </td>
       </ng-container>
 
       <!--Last Name Column -->
-      <ng-container matColumnDef="lname">
+      <!-- <ng-container matColumnDef="lname">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
         <td mat-cell *matCellDef="let element">{{ element.lname | titlecase}}</td>
       </ng-container>
-
+ -->
       <!-- Symbol Column -->
       <ng-container matColumnDef="mobile">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
@@ -96,30 +101,26 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let row; index as i">
-          <ganapati-action-buttons [enableAdd] [enableEdit] [enableDelete] (add)="addMortgage(row.customerid)" 
-          (edit)="onEdit(
+          <ganapati-action-buttons [enableAdd] [enableEdit] [enableDelete] (add)="addMortgage(row.customerid)" (edit)="onEdit(
           row.customerid,
           row.fname,
           row.lname,
           row.address,
           row.mobile,
           row.updated_at
-          )"
-          (delete)="onDelete()"></ganapati-action-buttons>
+          )" (delete)="onDelete(row)"></ganapati-action-buttons>
         </td>
       </ng-container>
 
       <!-- Symbol Column -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns" 
-      (click)="showCustomerDetails(row.customerid)"
-        style="cursor: pointer"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
     </table>
   </div>
 
   <mat-paginator [length]="customerListTableDataSource.filteredData.length" [pageIndex]="0" [pageSize]="10"
-    [pageSizeOptions]="[10, 25, 100]" showFirstLastButtons>
+                 [pageSizeOptions]="[10, 25, 100]" showFirstLastButtons>
 
   </mat-paginator>
 </div>
