added  page viewing mortgage-detail for particular mortgage_id

--- a/src/app/features/mortgage-details/shared/mortgage-detail-form/mortgage-detail-form.component.html
+++ b/src/app/features/mortgage-details/shared/mortgage-detail-form/mortgage-detail-form.component.html
@@ -42,7 +42,7 @@
             <div class="col-md-6 col-sm-6 mx-auto">
               <mat-form-field class="example-full-width">
                 <mat-label>Select staus</mat-label>
-                <mat-select [(value)]="selected">
+                <mat-select [value]="selected">
                   <mat-option value="option1">paid</mat-option>
                   <mat-option value="option2">recieved</mat-option>
                 </mat-select>
@@ -69,7 +69,6 @@
             </div>
           </div>
 
-
           <!-- date -->
           <div class="row">
             <div class="col-md-6 col-sm-6 mx-auto">
@@ -88,7 +87,6 @@
               </mat-form-field>
             </div>
           </div>
-
         </mat-card-content>
         <div class="row">
           <div class="col-md-9 col-sm-6">
