--- a/src/app/features/mortgage-details/pages/mortgage-detail/mortgage-detail.component.html
+++ b/src/app/features/mortgage-details/pages/mortgage-detail/mortgage-detail.component.html
@@ -8,30 +8,26 @@
     <!--  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
     <mat-card-content>
       <mat-list>
-        <h3 mat-subheader>Detials:</h3>
-        <mat-list-item *ngFor="let mortgagedetail of mortgageDetails">
-          <mat-icon mat-list-icon>details</mat-icon>
+        <h3 mat-subheader >Detials:</h3>
+        <mat-list-item>
+          <mat-icon mat-list-icon >details</mat-icon>
           <!--<div>
             <a
-              [routerLink]="['/createmortgagedetail']"
+              [routerLink]="['/createmortgages']"
               mat-stroked-button
-              color="primar"
+              color="primary"
               class="mt-3 mb-3"
             >Add Mortgage Detail: <mat-icon align="center">add</mat-icon></a
             >
           </div>    -->
-          <h4 mat-line>Mortgage detail id: {{ mortgagedetail.mortDetId }}</h4>
-          <h4 mat-line>Amount: {{ mortgagedetail.amount }}</h4>
-          <h4 mat-line>Days: {{ mortgagedetail.day }}</h4>
-          <h4 mat-line>Status: {{ mortgagedetail.status }}</h4>
-          <h4 mat-line>
-            Nepali Date of Transaction: {{ mortgagedetail.nepDate }}
-          </h4>
-          <h4 mat-line>
-            English Date of Transaction: {{ mortgagedetail.engDate | date }}
-          </h4>
+          <div *ngFor="let item of mortgages">
+          <h4 mat-line>Mortgage Id: {{ item.mortgageId }}</h4>
+          <h4 mat-line>Valuation: {{ item.amount }}</h4>
+          <h4 mat-line>Date: {{ item.engDate | date }}</h4>
+          <h4 mat-line>Interest: {{ interest }}</h4>
+          <h4 mat-line>Interest Received: {{ item.interestReceivedCollection[0] }}</h4>
+        </div>
         </mat-list-item>
-        <hr />
         <mat-divider></mat-divider>
       </mat-list>
     </mat-card-content>
@@ -41,4 +37,81 @@
       </button>
     </mat-card-actions>
   </mat-card>
+</div>
+
+<!-- test table -->
+<div class="content-wrapper">
+  <div
+    fxLayout
+    fxLayout.lt-md="column wrap"
+    fxLayoutAlign="center center"
+    fxLayoutGap.gt-sm="250px"
+    fxLayoutGap.lt.md="20px"
+  >
+    <!-- search  -->
+  </div>
+  <div class="example-container mat-elevation-z8 table-responsive">
+    <!--<div class="spinner-container" *ngIf="customerListTableDataSource==''">
+    <mat-spinner></mat-spinner>
+  </div>-->
+
+    <table
+      mat-table
+      [dataSource]="mortgageDetails"
+      matSort
+      class="example-full-width mb-3"
+      hover="true"
+    >
+      <!-- date -->
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+        <td mat-cell *matCellDef="let element">{{ element.nepDate }}</td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.status | titlecase }}
+        </td>
+      </ng-container>
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="days">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Days</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.day }}
+        </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+        <td mat-cell *matCellDef="let element">{{ element.amount }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let row; index as i">
+          <ganapati-action-buttons
+            [enableAdd]
+            [enableEdit]
+            [enableDelete]
+          ></ganapati-action-buttons>
+        </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+
+  <!-- <mat-paginator
+    [length]="customerListTableDataSource.filteredData.length"
+    [pageIndex]="0"
+    [pageSize]="10"
+    [pageSizeOptions]="[10, 25, 100]"
+    showFirstLastButtons
+  >
+  </mat-paginator> -->
 </div>
